[project]
name = "lafabrique-spectrum-flux"
description = "Spectrum-style acceleration path for FLUX in ComfyUI."
version = "1.0.1"
dependencies = []
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/evrardt/ComfyUI-Spectrum"
Issues = "https://github.com/evrardt/ComfyUI-Spectrum/issues"

[tool.comfy]
PublisherId = "lafabrique"
DisplayName = "ComfyUI-Spectrum"
Icon = ""
